--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,11 @@ env:
     - TARGET_PLATFORM=debian/stretch
     - TARGET_PLATFORM=debian/jessie
     - TARGET_PLATFORM=debian/wheezy
+    - TARGET_PLATFORM=ubuntu/bionic
     - TARGET_PLATFORM=ubuntu/xenial
     - TARGET_PLATFORM=ubuntu/trusty
 before_install:
-  - git clone -b v0.7.5 --depth 1 https://github.com/citusdata/tools.git
+  - git clone -b v0.7.7 --depth 1 https://github.com/citusdata/tools.git
   - sudo make -C tools install
   - export PACKAGING_SECRET_KEY="$(openssl aes-256-cbc -K $encrypted_a39e3f1ee8ba_key -iv $encrypted_a39e3f1ee8ba_iv -in signing_key.asc.enc -d | base64)"
 install: true
