--- a/dockerfiles/fedora-28-pg96/Dockerfile
+++ b/dockerfiles/fedora-28-pg96/Dockerfile
@@ -1,5 +1,5 @@
 # vim:set ft=dockerfile:
-FROM fedora:26
+FROM fedora:28
 
 # FIXME: Hack around docker/docker#10180
 RUN ( yum install -y yum-plugin-ovl || yum install -y yum-plugin-ovl ) \
@@ -12,6 +12,8 @@ RUN yum groupinstall -y 'Development Tools' \
         flex \
         gcc-c++ \
         hunspell-en \
+        libcurl-devel \
+        libicu-devel \
         libxml2-devel \
         libxslt-devel \
         openssl-devel \
@@ -21,8 +23,8 @@ RUN yum groupinstall -y 'Development Tools' \
         rpmlint \
         spectool \
         tar \
-    && yum install -y https://download.postgresql.org/pub/repos/yum/9.5/fedora/fedora-26-x86_64/pgdg-fedora95-9.5-4.noarch.rpm \
-    && yum install -y postgresql95-devel \
+    && yum install -y https://download.postgresql.org/pub/repos/yum/9.6/fedora/fedora-28-x86_64/pgdg-fedora96-9.6-4.noarch.rpm \
+    && yum install -y postgresql96-devel \
     && yum clean all
 
 # install jq to process JSON API responses
@@ -32,14 +34,14 @@ RUN curl -sL https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 
 
 # install latest Citus release to get header files
 RUN curl -s https://packagecloud.io/install/repositories/citusdata/community/script.rpm.sh | bash \
-    && yum install -y citus62_95 \
+    && yum install -y citus73_96 \
     && yum clean all
 
 RUN touch /rpmlintrc \
     && echo '%_build_pkgcheck %{_bindir}/rpmlint -f /rpmlintrc' >> /etc/rpm/macros
 
 # set PostgreSQL version, place scripts on path, and declare output volume
-ENV PGVERSION=9.5 \
+ENV PGVERSION=9.6 \
     PATH=/scripts:$PATH
 COPY scripts /scripts
 VOLUME /packages
