--- a/dockerfiles/ubuntu-xenial-all/Dockerfile
+++ b/dockerfiles/ubuntu-xenial-all/Dockerfile
@@ -1,5 +1,6 @@
 # vim:set ft=dockerfile:
 FROM ubuntu:xenial
+ARG DEBIAN_FRONTEND=noninteractive
 
 # See https://github.com/tianon/docker-brew-debian/issues/49 for discussion of the following
 #
@@ -55,7 +56,7 @@ RUN curl -sL https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 
 
 # install latest Citus release to get header files
 RUN curl -s https://packagecloud.io/install/repositories/citusdata/community/script.deb.sh | bash \
-    && apt-get install -y postgresql-9.5-citus-6.2 postgresql-9.6-citus-7.0 postgresql-10-citus-7.0 \
+    && apt-get install -y postgresql-9.6-citus-7.3 postgresql-10-citus-7.3 \
     && rm -rf /var/lib/apt/lists/*
 
 # patch pg_buildext to use multiple processors
