--- a/debian/rules
+++ b/debian/rules
@@ -3,26 +3,19 @@
 include /usr/share/postgresql-common/pgxs_debian_control.mk
 
 override_dh_auto_build:
-	+make PG_CONFIG=/usr/lib/postgresql/11/bin/pg_config
-	+make
-	+cd src/monitor && pg_buildext build build-%v
+	+pg_buildext build $(shell pwd)/src/bin/citusha build-%v
+	+pg_buildext build $(shell pwd)/src/monitor build-%v
 
 override_dh_auto_clean:
-	+cp -R debian src/monitor/
-	+make -C src/bin clean
-	+cd src/monitor && pg_buildext clean build-%v
+	+pg_buildext clean $(shell pwd)/src/bin/citusha build-%v
+	+pg_buildext clean $(shell pwd)/src/monitor build-%v
 
 override_dh_auto_test:
 	# nothing to do here, see debian/tests/* instead
 
-override_dh_install:
-	+dh_install --sourcedir=$(shell pg_config --bindir)
-
 override_dh_auto_install:
-	+make -C src/bin install
-	+cp ./src/monitor/citusha* ./src/monitor/build-*/
-	+cd src/monitor && pg_buildext install build-%v postgresql-%v-citus-ha
-	+cp -R ./src/monitor/* ./
+	+pg_buildext install $(shell pwd)/src/bin/citusha build-%v postgresql-%v-citus-ha
+	+pg_buildext install $(shell pwd)/src/monitor build-%v postgresql-%v-citus-ha
 
 %:
 	dh $@
