--- a/debian/rules
+++ b/debian/rules
@@ -1,20 +1,25 @@
 #!/usr/bin/make -f
 
 include /usr/share/postgresql-common/pgxs_debian_control.mk
+clean: debian/control
+
+.PHONY: debian/control
 
 override_dh_auto_build:
-	+pg_buildext build $(shell pwd)/src/bin/citusha build-%v
+	+make -C $(shell pwd)/src/bin/citusha
 	+pg_buildext build $(shell pwd)/src/monitor build-%v
 
 override_dh_auto_clean:
-	+pg_buildext clean $(shell pwd)/src/bin/citusha build-%v
+	+make -C $(shell pwd)/src/bin/citusha clean
 	+pg_buildext clean $(shell pwd)/src/monitor build-%v
 
 override_dh_auto_test:
 	# nothing to do here, see debian/tests/* instead
 
 override_dh_auto_install:
-	+pg_buildext install $(shell pwd)/src/bin/citusha build-%v postgresql-%v-citus-ha
+	+make -C $(shell pwd)/src/bin/citusha install \
+		DESTDIR=$(CURDIR)/debian/citus-ha \
+		BINDIR=/usr/bin
 	+pg_buildext install $(shell pwd)/src/monitor build-%v postgresql-%v-citus-ha
 
 %:
