--- a/dockerfiles/centos-7-pg10/Dockerfile
+++ b/dockerfiles/centos-7-pg10/Dockerfile
@@ -6,7 +6,8 @@ RUN ( yum install -y yum-plugin-ovl || yum install -y yum-plugin-ovl ) \
     && yum clean all
 
 # install build tools and PostgreSQL development files
-RUN yum groupinstall -y 'Development Tools' \
+RUN yum install -y epel-release \
+    && yum groupinstall -y 'Development Tools' \
     && yum install -y \
         curl \
         flex \
@@ -26,6 +27,11 @@ RUN yum groupinstall -y 'Development Tools' \
     && yum install -y https://download.postgresql.org/pub/repos/yum/10/redhat/rhel-7-x86_64/pgdg-centos10-10-2.noarch.rpm \
     && yum install -y postgresql10-devel \
     && yum clean all
+
+# install documentation generation libraries
+RUN yum install -y python-pip python-sphinx \
+    && pip install --upgrade pip \
+    && pip install -U Sphinx
 
 # install jq to process JSON API responses
 RUN curl -sL https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 \
