--- a/dockerfiles/centos-7-pg12/Dockerfile
+++ b/dockerfiles/centos-7-pg12/Dockerfile
@@ -1,5 +1,5 @@
 # vim:set ft=dockerfile:
-FROM %%os%%:%%release%%
+FROM centos:7
 
 # FIXME: Hack around docker/docker#10180
 RUN ( yum install -y yum-plugin-ovl || yum install -y yum-plugin-ovl ) \
@@ -26,8 +26,8 @@ RUN yum install -y centos-release-scl-rh epel-release \
         rpmlint \
         spectool \
         tar \
-    && yum install -y https://%%rpm_url%% \
-    && yum install -y postgresql%%pgshort%%-devel \
+    && yum install -y https://download.postgresql.org/pub/repos/yum/reporpms/EL-7-x86_64/pgdg-redhat-repo-latest.noarch.rpm \
+    && yum install -y postgresql12-devel \
     && yum clean all
 
 # install jq to process JSON API responses
@@ -35,16 +35,16 @@ RUN curl -sL https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 
          -o /usr/bin/jq \
     && chmod +x /usr/bin/jq
 
-# install latest Citus release to get header files
+# DO NOT install latest Citus release to get header files
 RUN curl -s https://packagecloud.io/install/repositories/citusdata/community/script.rpm.sh | bash \
-    && yum install -y citus80_%%pgshort%% \
+    # && yum install -y citus83_11 \
     && yum clean all
 
 RUN touch /rpmlintrc \
     && echo '%_build_pkgcheck %{_bindir}/rpmlint -f /rpmlintrc' >> /etc/rpm/macros
 
 # set PostgreSQL version, place scripts on path, and declare output volume
-ENV PGVERSION=%%pgversion%% \
+ENV PGVERSION=12 \
     PATH=/scripts:$PATH
 COPY scripts /scripts
 VOLUME /packages
