--- a/dockerfiles/oraclelinux-7-pg11/Dockerfile
+++ b/dockerfiles/oraclelinux-7-pg11/Dockerfile
@@ -5,6 +5,13 @@ FROM oraclelinux:7
 RUN ( yum install -y yum-plugin-ovl || yum install -y yum-plugin-ovl ) \
     && yum clean all
 
+# FIXME: make sure ol7_developer repo is available
+# see https://oracle-base.com/articles/linux/download-the-latest-oracle-linux-repo-file#oracle-linux-7-updated
+RUN pushd /etc/yum.repos.d/ \
+    && rm -f * \
+    && curl -O http://yum.oracle.com/public-yum-ol7.repo \
+    && popd
+
 # install build tools and PostgreSQL development files
 RUN yum-config-manager --enable \
         ol7_software_collections \
