--- a/dockerfiles/debian-stretch-all/Dockerfile
+++ b/dockerfiles/debian-stretch-all/Dockerfile
@@ -57,8 +57,10 @@ RUN echo 'deb http://apt.postgresql.org/pub/repos/apt/ stretch-pgdg main' > /etc
         libxslt-dev \
         lintian \
         postgresql-server-dev-all \
-        wget \
         zlib1g-dev \
+        # Add 12 package explicitly as *-all does not yet depend on 12 yet
+        postgresql-server-dev-12 \
+                wget \
     && rm -rf /var/lib/apt/lists/*
 
 # install jq to process JSON API responses
