--- a/dockerfiles/ubuntu-bionic-all/Dockerfile
+++ b/dockerfiles/ubuntu-bionic-all/Dockerfile
@@ -57,7 +57,9 @@ RUN echo 'deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main' > /etc/
         libxslt-dev \
         lintian \
         postgresql-server-dev-all \
-        wget \
+        # Add 12 package explicitly as *-all does not yet depend on 12 yet
+        postgresql-server-dev-12 \
+                wget \
     && rm -rf /var/lib/apt/lists/*
 
 # install jq to process JSON API responses
