--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ env:
   matrix:
     - TARGET_PLATFORM=el/6
     - TARGET_PLATFORM=ol/6
+    - TARGET_PLATFORM=el/7
+    - TARGET_PLATFORM=ol/7
     - TARGET_PLATFORM=el/8
 before_install:
   - git clone -b v0.7.13 --depth 1 https://github.com/citusdata/tools.git
