--- a/dockerfiles/centos-8-pg12/Dockerfile
+++ b/dockerfiles/centos-8-pg12/Dockerfile
@@ -28,8 +28,13 @@ RUN yum install -y epel-release \
 
 RUN dnf install -y https://download.postgresql.org/pub/repos/yum/reporpms/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm \
     && dnf -qy module disable postgresql \
-    && yum install -y postgresql12-devel \
+    && yum install -y postgresql12-server postgresql12-devel \
     && yum clean all
+
+# install documentation generation libraries
+RUN yum install -y python2 python2-pip  \
+    && pip2 install --upgrade pip \
+    && pip2 install -U Sphinx
 
 # install jq to process JSON API responses
 RUN curl -sL https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 \
