--- a/dockerfiles/oraclelinux-6-pg11/Dockerfile
+++ b/dockerfiles/oraclelinux-6-pg11/Dockerfile
@@ -26,7 +26,7 @@ RUN yum groupinstall -y 'Development Tools' \
         spectool \
         tar \
     && yum install -y https://download.postgresql.org/pub/repos/yum/11/redhat/rhel-6-x86_64/pgdg-oraclelinux11-11-2.noarch.rpm \
-    && yum install -y postgresql11-devel \
+    && yum install -y  postgresql11-server postgresql11-devel \
     && yum clean all
 
 # install jq to process JSON API responses
